--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.CartActivity"></activity>
+        <activity android:name=".view.MainActivity"></activity>
+        <activity android:name=".view.CartActivity" />
         <activity android:name=".view.ProductActivity" />
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
